# ATARI

./: .gitignore  .gitmodules  Analyze_Performance.py  CITATION.cff  E_structure  LICENSE  README.md  baron_fit_rev1.m  baronfit_lite.m  dev.ipynb  dev.py  environment.yml  fit_main.m  fort.61  fort.71  main_sammy_interface.py  p_3_300_e_jobarray.sh  perf_test_main.py  perf_test_template.m  pyproject.toml  requirements.txt  run_PSwarm.m  run_baron.m  run_tests.py  run_unit_tests.py  sammy_interface.py  sample_res_parameters.m  setup.cfg  submit_matlab.sh  template_1L.par  template_T.inp  template_allexp.inp  test.par  test_SLBW_fit.m  test_baron_fit.m
ATARI/: __init__.py
Fitting/: LRT.m  MLE_Walton.m  MLE_approach.m  baron_fit_rev1.m  baron_fit_rev1_oldcsvs.m  baron_fit_rev2.m  baron_fit_rev3.m  baronfit_lite_j3.m  baronfit_lite_noMI.m  csv_to_hdf5.py  find_poles.py  jobarray.sh  pswarm_fit_rev1.m  resonance_convolution_cole.ipynb  resonance_identification.ipynb  resub_job_template.sh  sub_csv2h5.sh
PiTFAll/: __init__.py  performance_test.py  sample_case.py
docs/: atari_logo.py
examples/: AutoFit.ipynb  AutoFit_Elim.ipynb  AutoFit_Elim_model_comparison.ipynb  Compare_Resonance_Models.ipynb  GenerateData_UserExample.ipynb  GenerateData_UserExample_SAMMY.ipynb  Generate_Synthetic_Data.ipynb  ReadENDF.ipynb  SAMNDF.INP  SammyFit_UserExample.ipynb  SammyFit_UserExample_LS.ipynb  SammyFit_UserExample_YW.ipynb  Sammy_Interface.ipynb  Sammy_derivatives.ipynb  TAZ_example.ipynb  UPR_presentation_ladder.csv  UserExample_PiTFAll.ipynb  csv_to_hdf5.py  csv_to_hdf5_singlefit.py  (+14 more)
(+455 files in other folders)
