[metadata]
# This is required for any package to install with a name
name = ATARI
author = Noah Walton
author_email = nwalton1@vols.utk.edu
version = 1.1.0
description = AI/ML Tool for Automated Resonance Identification
long_description = file: README.rst, LICENSE.rst
# keywords = one, two
license = MIT

# If you are using the "src" layout then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
python_requires = >=3.6, <4
include_package_data = True
install_requires = 
    pandas
    numpy
    scipy
    matplotlib

packages=find:


[options.package_data]
ATARI.sammy_interface.sammy_templates=*.inp
